[tool.poetry]
name = "netrecon"
version = "0.1.0"
description = "A network device discovery scanner"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scapy = "*"  # For packet manipulation and scanning
rich = "*"   # For beautiful table output
click = "*"  # For building CLI

[tool.poetry.scripts]
netrecon = "src.netrecon.cli:main"
